# CS-4ZP6A-Capstone-Akanda

./: .gitattributes  .gitignore  .vercelignore  CONTRIBUTING.md  Dockerfile  README.md  cabal.project  hie.yaml  requirements.txt  run_test.sh  startup.json  test.hs  vercel.json  vercel.py
.github/workflows/: ci.yml  generate-list.yml  generate-range.yml  golden.yml  run.yml  startup-time.yml  static.yml  test.yml
cli/: cli  go.mod  go.sum  startup.json
cli/cmd/: generate-list.go  generate-range.go  helper_func.go  info.go  print.go  root.go  start-time.go
examples/agda/: Basics.agda  README.md
examples/idris/: Basics.idr  README.md
examples/lean/: Basics.lean  README.md
examples/rocq/: README.md  basics.v
generators/: CHANGELOG.md  LICENSE  panbench-generators.cabal
generators/app/: LetAddExample.hs  LetExample.hs
results/: Test1.htm  Test2.htm  Test3.htm  Test4.htm  Test9.htm  test1.html  test10.html  test11.html  test12.html  test13.html  test14.html  test15.html  test16.html  test18.html  test19.html  test2.html  test20.html  test21.html  test3.html  test4.html  test5.html  test6.html  test7.html  test8.html  test9.html
site/: LICENSE  babelfish-site.cabal  panbench-site.cabal
site/app/: Main.hs
site/app/Panbench/: HTML.hs  Internal.hs  Vega.hs
site/app/Panbench/Shake/: Benchmark.hs  Dev.hs  File.hs  HTML.hs  Lang.hs  Matrix.hs  Vega.hs
site/app/Panbench/Site/: Shake.hs
site/cbits/: benchmark.c
site/include/: benchmark.h
translators/: CHANGELOG.md  Grammar.hi  Grammar.hs  LICENSE  PrintAgda.hi  PrintAgda.hs  PrintIdris.hi  PrintIdris.hs  PrintLean.hi  PrintLean.hs  PrintRocq.hi  PrintRocq.hs  Tests.hs  grammar.hs  main.hi  main.hs  printAgda.hs  printIdris.hs  printRocq.hs  tests.hs  translators.cabal
translators/Print/: Agda.hs  Idris.hs  Rocq.hs
translators/app/: Main.hs
translators/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
translators/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  translators-0.1.0.0-inplace.conf
translators/good_Output/: ChainDefFields_NonDependentRecordModule.idr  ChainDef_DependentRecordModule.agda  ChainDef_DependentRecordModule.lean  DeepDependency_VariableModule.agda  DeepDependency_VariableModule.idr  DeepDependency_VariableModule.lean  DeepDependency_VariableModule.v  Fields_DependentRecordModule.agda  Fields_DependentRecordModule.lean  Fields_NonDependentRecordModule.idr  Fields_NonDependentRecordModule.v  FirstLast_VariableModule.lean  LetExample.lean  Parameters_DependentRecordModule.agda  Parameters_DependentRecordModule.idr  Parameters_DependentRecordModule.lean
translators/src/: Grammar.hs  Panbench.hs  PrintLean.hs  Tests.hs
translators/src/Panbench/: Bwd.hs  Lang.hs
translators/src/Panbench/Data/List/: Bwd.hs
translators/src/Print/: Agda.hs  Generic.hs  Idris.hs  Lean.hs  Rocq.hs
translators/test/golden/: Main.hs
translators/test/golden/Golden/Util/: File.hs
translators/test/snapshot/: ChainDefFields_NonDependentRecordModule.agda  ChainDefFields_NonDependentRecordModule.idr  ChainDefFields_NonDependentRecordModule.lean  ChainDefFields_NonDependentRecordModule.v  ChainDef_DependentRecordModule.agda  ChainDef_DependentRecordModule.idr  ChainDef_DependentRecordModule.lean  ChainDef_DependentRecordModule.v  ConstructorsParameters_Datatypes.agda  ConstructorsParameters_Datatypes.idr  ConstructorsParameters_Datatypes.lean  ConstructorsParameters_Datatypes.v  Constructors_Datatypes.agda  Constructors_Datatypes.idr  Constructors_Datatypes.lean  Constructors_Datatypes.v  DataImplicitIndices.agda  DataImplicitIndices.idr  DataImplicitIndices.lean  DataImplicitIndices.v  DataSimpleDeclarations.agda  DataSimpleDeclarations.idr  DataSimpleDeclarations.lean  DataSimpleDeclarations.v  DeepDependency_VariableModule.agda  DeepDependency_VariableModule.idr  DeepDependency_VariableModule.lean  DeepDependency_VariableModule.v  Fields_DependentRecordModule.agda  Fields_DependentRecordModule.idr  Fields_DependentRecordModule.lean  Fields_DependentRecordModule.v  Fields_NonDependentRecordModule.agda  Fields_NonDependentRecordModule.idr  Fields_NonDependentRecordModule.lean  Fields_NonDependentRecordModule.v  FirstLast_VariableModule.agda  FirstLast_VariableModule.idr  FirstLast_VariableModule.lean  FirstLast_VariableModule.v  (+43 more)
visualization/: app.py  data.json  data_nine.json  dummy.json  dummyNew.json  dummy_model.json  graph.py
visualization/templates/: index.html
web/css/: site.css
web/js/: vega-lite@4.7.0.js  vega@5.10.js
