cabal-version:      3.0
name:               panbench-generators
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Reed Mullanix
maintainer:         mullanir@mcmaster.ca
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common generator
    ghc-options: -Wall
    build-depends:
        base >=4.17.2.0,
        text >= 2.1 && <3.0,
        translators
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        ImportQualifiedPost
        OverloadedStrings

executable LetExample
    import:           generator
    main-is:          LetExample.hs

executable LetAddExample
    import:           generator
    main-is:          LetAddExample.hs
