cabal-version:      3.0
name:               translators
version:            0.2.3.0
synopsis:           A generic proof-assistant benchmarking framework.
license:            MIT
author:             Zainab Abdulsada, Esha Pisharody, Emma Willson, Grace Croome, Marie Hollington, Proyetei Akanda, Jacques Carette, Reed Mullanix

maintainer:         carette@mcmaster.ca
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common extensions
     default-extensions:
       BlockArguments,
       OverloadedStrings,
       ImportQualifiedPost

library
    import: warnings, extensions
    exposed-modules:  
        Grammar,
        Panbench.Bwd,
        Panbench,
        Print.Generic,
        Print.Agda, 
        Print.Idris, 
        Print.Lean, 
        Print.Rocq,
        Tests
    build-depends:
        base >=4.17.2.0,
        optparse-applicative >= 0.19,
        prettyprinter >=1.7.1 && < 2.0,
        text >= 2.1 && < 3.0,
        containers >= 0.6 && < 0.7
    hs-source-dirs: src
    default-language: Haskell2010

executable translators
    import: warnings, extensions
    main-is:  Main.hs
    build-depends:
        translators,
        base >=4.17.2.0,
        prettyprinter >=1.7.1 && < 2.0,
        text >= 2.1 && < 3.0,
        containers >= 0.6 && < 0.7
    hs-source-dirs: app
    default-language: Haskell2010

test-suite translators-golden
    import: warnings, extensions
    main-is: Main.hs
    other-modules:
        Golden.Util.File
    build-depends:
        translators,
        base >=4.17.2.0,
        containers >= 0.6 && < 0.7,
        prettyprinter >=1.7.1 && < 2.0,
        text >= 2.1 && < 3.0,
        directory >= 1.3,
        filepath >= 1.5,
        tasty >= 1.5,
        tasty-golden >= 2.3
    if os(windows)
        build-depends: Win32 >= 2.12
    else
        build-depends: unix  >= 2.8
    hs-source-dirs: test/golden
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    
